--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-hi {
+@import url('https://fonts.googleapis.com/css?family=Ubuntu')
+body {
   font-family: Ubuntu;
+}
+.h1explore {
+  text-align: center;
 }
